--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -459,6 +459,18 @@
 
 - name: "copr:build.almalinux.org:soksanichenko:Pungi10"
   repositories:
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:riscv64"
+      arch: riscv64
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-riscv64-dr/"
+      debug: false
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:riscv64-debug"
+      arch: riscv64
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-riscv64-debug-dr/"
+      debug: true
+      production: false
     - name: "copr:build.almalinux.org:soksanichenko:Pungi10:x86_64"
       arch: x86_64
       type: rpm
