--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -950,6 +950,9 @@
       dnf_common_opts:
         - --nobest
         # - --exclude=fedora*
+      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config fedora-release which xz sed
+        make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
+        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core kernel-rpm-macros
   repositories:
     - name: fedora-40-i686
       arch: i686
