--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -1789,6 +1789,9 @@
       - name: '9.6'
         version_prefix: '90600'
         dist_prefix: 'el9.6.0'
+      - name: '9.7'
+        version_prefix: '90700'
+        dist_prefix: 'el9.7.0'
     yum:
       best: true
       module_platform_id: platform:el9
