--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -1064,7 +1064,7 @@
     mock:
       chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
-        info patch util-linux findutils grep zlib git-core kernel-rpm-macros
+        info patch util-linux findutils grep zlib git-core
 
 - name: add-epel-rpm-macros
   data:
@@ -1072,7 +1072,6 @@
       chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
         info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core epel-rpm-macros
-        kernel-rpm-macros
 
 - name: nvidia-cuda
   repositories:
