--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -36,7 +36,7 @@
     mock:
       chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
-        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core kernel-rpm-macros
+        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core
       dnf_common_opts:
         - --setopt=deltarpm=False
         - --allowerasing
@@ -1746,7 +1746,7 @@
     mock:
       chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
-        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core kernel-rpm-macros
+        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core
       dnf_common_opts:
         - --setopt=deltarpm=False
         - --allowerasing
@@ -3473,7 +3473,7 @@
     mock:
       chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config centos-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
-        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core kernel-rpm-macros
+        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core
       dnf_common_opts:
         - --setopt=deltarpm=False
         - --allowerasing
@@ -5527,7 +5527,7 @@
     mock:
       chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
-        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core kernel-rpm-macros
+        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core
       dnf_common_opts:
         - --setopt=deltarpm=False
         - --allowerasing
