--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -1001,12 +1001,25 @@
     mock:
       dnf_common_opts:
         - --nobest
-        # - --exclude=fedora*
   repositories:
     - name: fedora-40-i686
       arch: i686
       type: rpm
       url: https://kojipkgs.fedoraproject.org/repos/f40-build/6370873/i386/
+      production: false
+      debug: false
+      priority: 20
+
+- name: Fedora-41-i686
+  data:
+    mock:
+      dnf_common_opts:
+        - --nobest
+  repositories:
+    - name: fedora-41-i686
+      arch: i686
+      type: rpm
+      url: https://kojipkgs.fedoraproject.org/repos/f41-build/latest/i386/
       production: false
       debug: false
       priority: 20
